src/objects/RT1__CaseRecording__c.object
<CustomObject>
    <description>Object to connect a Case to a Recording.</description>
    <fields>
        <fullName>RT1__Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>ReadyTalk Recording Playback History</relationshipLabel>
        <relationshipName>Recordings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RT1__RecordingDateTime__c</fullName>
        <label>Recording Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RT1__Recording__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recording Title</label>
        <referenceTo>RT1__Recording__c</referenceTo>
        <relationshipLabel>ReadyTalk Recording Playback History</relationshipLabel>
        <relationshipName>Recordings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Recording</label>
    <nameField>
        <label>Recording ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recordings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>